The Office of Management and Budget Memo link updated

--- a/templates/ctb/privacy.html
+++ b/templates/ctb/privacy.html
@@ -75,10 +75,11 @@
                 <h5>How CTB Uses Cookies</h5>
                 <p>
                     The Office of Management and Budget Memo
-                    <a href="https://www.whitehouse.gov/sites/whitehouse.gov/files/omb/memoranda/2010/m10-22.pdf" target="_blank" rel="noopener noreferrer">
+                    <a href="https://www.whitehouse.gov/wp-content/uploads/2022/04/M-22-10.pdf" target="_blank" rel="noopener noreferrer">
                     M-10-22, Guidance for Online Use of Web Measurement and Customization Technologies</a> (link is external) allows
                     Federal agencies to use session and persistent cookies.
                     </p>
+
                 <p>
                     When you visit any Web site, its server may generate a piece of text known as a "cookie" to place on your
                     computer. The cookie allows the server to "remember" specific information about your visit while you are
