--- a/templates/donors/clinical_search_facility_result.html
+++ b/templates/donors/clinical_search_facility_result.html
@@ -47,7 +47,7 @@
                                    aria-label="Search Save" aria-describedby="search-save">
                             <input type="hidden" name="filter_encoded_url" value="{{ filter_encoded_url }}"/>
                             <input type="hidden" name="total" value="{{ clinic_search_result.avail }}"/>
-                            <input type="hidden" name="search_type" value="Clinic"/>
+                            <input type="hidden" name="search_type" value="Clinical"/>
                             <button class="btn btn-primary" type="button" id="search-save"><i
                                     class="fa-solid fa-floppy-disk"></i> Save Search
                             </button>
