--- a/templates/ctb/filter_saved_searches.html
+++ b/templates/ctb/filter_saved_searches.html
@@ -3,10 +3,11 @@
 <table id="saved_searches_tbl" class="table table-striped" style="width:100%">
     <thead>
     <tr>
-        <th>Search</th>
+        <th>Name</th>
         <th>Type</th>
         <th>Results</th>
-        <th>Proceed</th>
+{#        <th>Date</th>#}
+{#        <th>Proceed</th>#}
         <th class="text-center">Delete</th>
     </tr>
     </thead>
