--- a/templates/two_factor/core/login.html
+++ b/templates/two_factor/core/login.html
@@ -24,7 +24,8 @@
                             {% endif %}
 
                             {% csrf_token %}
-                            {% include "two_factor/_wizard_forms.html" %}
+{#                            {% include "two_factor/_wizard_forms.html" %}#}
+                            {% include "two_factor/_simple_wizard_forms.html" %}
 
                             {# hidden submit button to enable [enter] key #}
                             <input type="submit" value="" hidden/>
