--- a/templates/two_factor/core/setup_complete.html
+++ b/templates/two_factor/core/setup_complete.html
@@ -2,23 +2,34 @@
 {% load i18n %}
 
 {% block content %}
-  <h1>{% block title %}{% trans "Enable Two-Factor Authentication" %}{% endblock %}</h1>
+    <div class="row justify-content-center my-5">
+        <div class="col-lg-5 accounts-col">
+            <div class="card user-panel">
+                <div class="card-header">
+                    <h5>{% block title %}{% trans "Enable Two-Factor Authentication" %}{% endblock %}
+                    </h5>
+                </div>
+                <div class="card-body px-4 py-3">
 
-  <p>{% blocktrans trimmed %}Congratulations, you've successfully enabled two-factor
-      authentication.{% endblocktrans %}</p>
+                    <p>{% blocktrans trimmed %}Congratulations, you've successfully enabled two-factor
+                        authentication.{% endblocktrans %}</p>
 
-  {% if not phone_methods %}
-    <p><a href="{% url 'two_factor:profile' %}"
-        class="btn btn-block btn-secondary">{% trans "Back to Account Security" %}</a></p>
-  {% else %}
-    <p>{% blocktrans trimmed %}However, it might happen that you don't have access to
-      your primary token device. To enable account recovery, add a phone
-      number.{% endblocktrans %}</p>
+                    {% if not phone_methods %}
+                        <p><a href="{% url 'two_factor:profile' %}"
+                              class="btn btn-block btn-secondary">{% trans "Back to Account Security" %}</a></p>
+                    {% else %}
+                        <p>{% blocktrans trimmed %}However, it might happen that you don't have access to
+                            your primary token device. To enable account recovery, add a phone
+                            number.{% endblocktrans %}</p>
 
-    <a href="{% url 'two_factor:profile' %}"
-        class="float-right btn btn-link">{% trans "Back to Account Security" %}</a>
-    <p><a href="{% url 'two_factor:phone_create' %}"
-        class="btn btn-success">{% trans "Add Phone Number" %}</a></p>
-  {% endif %}
+                        <a href="{% url 'two_factor:profile' %}"
+                           class="float-right btn btn-link">{% trans "Back to Account Security" %}</a>
+                        <p><a href="{% url 'two_factor:phone_create' %}"
+                              class="btn btn-success">{% trans "Add Phone Number" %}</a></p>
+                    {% endif %}
+                </div>
+            </div>
+        </div>
+    </div>
 
 {% endblock %}
