--- a/templates/two_factor/profile/disable.html
+++ b/templates/two_factor/profile/disable.html
@@ -1,14 +1,34 @@
 {% extends "two_factor/_base_focus.html" %}
 {% load i18n %}
+{% load custom_tags %}
 
 {% block content %}
-  <h1>{% block title %}{% trans "Disable Two-factor Authentication" %}{% endblock %}</h1>
-  <p>{% blocktrans trimmed %}You are about to disable two-factor authentication. This
-    weakens your account security, are you sure?{% endblocktrans %}</p>
-  <form method="post">
-    {% csrf_token %}
-    <table>{{ form.as_table }}</table>
-    <button class="btn btn-danger"
-            type="submit">{% trans "Disable" %}</button>
-  </form>
+    <div class="row justify-content-center my-5">
+        <div class="col-lg-5 accounts-col">
+            <div class="card user-panel">
+                <div class="card-header">
+                    <h5>{% block title %}{% trans "Disable Two-factor Authentication" %}{% endblock %}
+                    </h5>
+                </div>
+                <div class="card-body px-4 py-3">
+                    <p>{% blocktrans trimmed %}You are about to disable two-factor authentication. This
+                        weakens your account security, are you sure?{% endblocktrans %}</p>
+                    <form method="post">
+                        {% csrf_token %}
+                        <div class="mb-2">
+                        {% for field in form %}
+                            {{ field|add_classes:'form-check-input' }}
+                            <label class="form-check-label ms-1">{{ field.label }}</label>
+                        {% endfor %}
+                        </div>
+{#                        <table class="mb-3">{{ form.as_table }}</table>#}
+                        <a href="{% url 'two_factor:profile' %}"
+                           class="btn btn-outline-secondary">{% trans "Cancel" %}</a>
+                        <button class="float-end btn btn-danger" type="submit"><i class="fas fa-ban"></i> {% trans "Disable" %}
+                        </button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
