--- a/templates/ctb/filter_saved_searches.html
+++ b/templates/ctb/filter_saved_searches.html
@@ -6,8 +6,7 @@
         <th>Name</th>
         <th>Type</th>
         <th>Results</th>
-{#        <th>Date</th>#}
-{#        <th>Proceed</th>#}
+        <th>Saved Date</th>
         <th class="text-center">Delete</th>
     </tr>
     </thead>
